Fix button wrapping bug in DataControls

--- a/src/containers/pages/HoursPage/DataControls.scss
+++ b/src/containers/pages/HoursPage/DataControls.scss
@@ -28,6 +28,9 @@
     }
 
     .control-buttons {
+        display: flex;
+        width: 256px;
+
         :first-child {
             margin-right: 8px;
         }
