--- a/src/containers/pages/HoursPage/HoursPage.scss
+++ b/src/containers/pages/HoursPage/HoursPage.scss
@@ -3,7 +3,7 @@
 .hours-page {
     .controls {
         position: sticky;
-        top: $header-height + 1px;
+        top: $header-height;
     }
 
     .weeks {
